fix overflow portfolio

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -19,14 +19,10 @@ html {
 	font-size: 62.5%;
 	color: var(--grey-dark);
 	scroll-behavior: smooth;
-
-	// @include respond(phone) {
-	// 	font-size: 50%;
-	// }
-
-	// @include respond(tablet) {
-	// 	font-size: 60%;
-	// }
+	
+	@include media(">small", "<medium") {
+		font-size: 50%;
+	}
 }
 
 .cursor {
