--- a/sass/sections/_portfolio.scss
+++ b/sass/sections/_portfolio.scss
@@ -4,6 +4,7 @@
 	display: flex;
 	padding-left: 10rem;
 	margin-bottom: 80%;
+	overflow: hidden;
 
 
 	&__text {
